Fix image sizes on mobile

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -140,12 +140,12 @@ h3 {
   }
 
   .about-img {
-    width: 100%;
-    min-width: none;
-    max-width: none;
-    height: 100%;
     overflow: hidden;
     position: relative;
+    max-width: 100%;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
   }
 
   .about-img.left {
@@ -161,7 +161,6 @@ h3 {
       vertical-align: middle;
       align-items: center;
       justify-content: center;
-      padding-bottom: 50px;
     }
     .cta-text {
       margin: 0;
@@ -178,7 +177,6 @@ h3 {
       vertical-align: middle;
       align-items: center;
       justify-content: center;
-      padding-bottom: 50px;
       flex-direction: column-reverse;
     }
     .cta-text {
